2003-02-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGDragView.m: Set drag window at NSPopUpMenuWindowLevel
	so that it lies above pretty much anything apart from screensaver.

2003-02-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m
	Removed implementation of image sliding. Corrected
	xgps_cursor_image compiler warning.
	* Header/x11/XGSlideView.h
	* Source/x11/XGSlideView.m
	Removed files as they are now in the front end.
	* Source/x11/GNUmakefile
	Removed XGSlideView.m
	
2003-02-10 18:44  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Implement -glyphIsEncoded:.
	(add_face): Avoid calling malloc(0).

2003-02-09  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (-GSShowGlyphs::): Implement to use
	glyphshow if font gives back glyph names, otherwise use previous
	hack.

2003-02-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSStreamContext.m
	[DPSconcat:] simplify the output for common cases.
	[GSShowGlyphs::] added hack implementation, so that some usefull
	output is still provided.

2003-02-08 21:10  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m: Add somewhat experimental -nameOfGlyph:
	method to try to get printing to work.

2003-02-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m (ihandler): Fix for mingw, which doesn't have kill()
	* Headers/winlib/WIN32FontInfo.h: New method to draw glyphs
	* Source/winlib/WIN32FontInfo.m: New method to draw glyphs
	* Source/winlib/WIN32GState.m: New method to draw glyphs

2003-02-02 22:00  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (-initWithFontName:matrix:screenFont:): Use
	better guess for x-height value.

	* Source/x11/XGServerWindow.m: Use safer order of includes.

	* Source/xlib/GSXftFontInfo.m (-widthOfGlyphs:lenght:,
	-drawGlyphs:lenght:onDisplay:drawable:with:at:): Convert glyph
	buffers to 16-bit buffers that the Xft functions can handle.

	* Source/xlib/XGFont.m: Whitespace cleanups.
